fix(style/pikabu): bugfix overflow-x

--- a/hosts/pikabu.ru/style.css
+++ b/hosts/pikabu.ru/style.css
@@ -11,8 +11,15 @@
     color: #83b65b;
 }
 
+/* скрываем переполнение по горизонтали при отображении в <iframe/> */
+.ua_frame_yes {
+    .page__container {
+        overflow-x: hidden;
+    }
+}
+
 .page {
-    overflow: hidden;
+    overflow-x: hidden;
     color: #454648;
 
     &__footer {
